# kimballorm

./: .gitignore  .sqlfluff  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
alembic/: env.py
alembic/versions/: 169c3f28db5c_added_tables_to_metadata_schema.py  3397b6edc5b2_.py  3fbe8fbef158_added_bridge_table_time_table_standard.py  59a5b26c79cf_added_bridge_time_table_comp.py  64618c04e010_add_2_dimensions_annuma_and_duration_.py  71c67c46676b_modified_the_metadata_tables_to_include_.py  7212b7d8bc61_added_factinventorybalance_and_.py  75c605aebcdc_added_dimpart.py  7b32d7cb5bb6_added_dimpart.py  7f42731d0ae9_added_tables_to_metadata_schema.py  88c415701cd5_initial_migration.py  a9dc90b15304_added_tables_to_metadata_schema.py  be46a8e1580e_added_dimpartid.py  c28f58b1ebab_added_tables_to_metadata_schema.py  c4dfdfa3d2e8_modified_the_metadata_tables_to_include_.py  c63c61a485d5_added_dimpart.py  c915de520d6d_added_columns_to_both_duration_and_.py  cb4cfa3967fe_added_duration_and_annum_source_tables.py  d0b7997b37e8_added_bridge_table_time_table_standard.py  d3484598c542_added_active_columns_to_duration_and_.py  d370fb7055d3_added_column_action_to_time_table.py  d52766788bf5_fixed_metadata_table.py  e199de86f77e_added_factor_column_to_the_product_line_.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/integration/: build_data_warehouse.py  build_data_warehouse_concurrent.py  build_dimensions_from_archive.py  build_historical_scd2_dimensions.py  generate_statements.py  generate_target_table_update_stored_procedures.py  print_statements.py  publish_all_source_table_stored_procedures.py  publish_all_update_source_table_stored_procedures.py  publish_source_table_stored_procedure.py  (+4 more)
tests/: __init__.py  test_kimballorm.py
untracked_docs/: github_workflow.md
(+117 files in other folders)
