[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "kimballorm"
version = "0.1.0"
description = "This project provides the ability to manage a data warehous using sqlalchmey and alembic.  Importantly, this data warehouse is a dimensional model that follows the Ralph Kimball data warehousing philosphy.  As a result each table in the ORM is defined with the appropriate type of dimension or fact table it represents.  Further each type of table inherits certain functions that better allow for the automation of CRUD scripts to be deployed to the database."
readme = "README.rst"
authors = [
  {name = "Jared Felice", email = "jared.felice@fisherautoparts.com"}
]
maintainers = [
  {name = "Jared Felice", email = "jared.felice@fisherautoparts.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
    "setuptools>=65.5.1",
    "wheel==0.43.0",
    "psycopg2==2.9.9",
    "sqlalchemy>=1.4.52",
    "sqlalchemy-redshift>=0.8.14",
    "python-dotenv>=1.0.1",
    "pandas==2.1.4",
    "sqlfluff==3.1.0"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "build==1.1.1"
]

[project.urls]

bugs = "https://github.com/jmfelice/kimballorm/issues"
changelog = "https://github.com/jmfelice/kimballorm/blob/master/changelog.md"
homepage = "https://github.com/jmfelice/kimballorm"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

